--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,3 +37,7 @@ jobs:
         uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: ${{ matrix.perl }}
+          install-modules-with: cpanm
+      
+      - name: Run Tests
+        run: perl run_tests.pl
