--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -43,3 +43,12 @@ jobs:
       
       - name: Run Tests
         run: perl run_tests.pl
+      
+      - name: Notify Slack
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
