--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Run Tests
+name: Demo Workflow
 
 # Controls when the action will run. 
 on: push
@@ -8,7 +8,7 @@ on: push
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  run-tests:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
