--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -9,8 +9,10 @@ on: push
 jobs:
   # This workflow contains a single job called "build"
   run-tests:
+    name: Run Tests
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    container: ubuntu:trusty
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
