--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -12,7 +12,6 @@ jobs:
     name: Run Tests
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container: ubuntu:trusty
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,3 +28,11 @@ jobs:
         run: |
           echo Hello Tamara,
           echo this is a demo for GitHub Actions.
+      
+      - name: Set up Perl
+        uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: '5.30'
+      
+      - name: Display perl version
+        run: perl -V
