--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -12,6 +12,10 @@ jobs:
     name: Run Tests
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        perl: ['5.14', '5.30', '5.32']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,10 +33,10 @@ jobs:
           echo Hello Tamara,
           echo this is a demo for GitHub Actions.
       
-      - name: Set up Perl
+      - name: Set up Perl ${{ matrix.perl }}
         uses: shogo82148/actions-setup-perl@v1
         with:
-          perl-version: '5.30'
+          perl-version: ${{ matrix.perl }}
       
       - name: Display perl version
         run: perl --version
