--- a/.github/workflows/demo_workflow.yml
+++ b/.github/workflows/demo_workflow.yml
@@ -30,7 +30,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Hello Tamara,
+          echo Hello ${{ secrets.USER_NAME }},
           echo this is a demo for GitHub Actions.
       
       - name: Set up Perl ${{ matrix.perl }}
