--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -12,6 +12,7 @@ jobs:
     name: Run Tests
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    container: ubuntu:trusty
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
