--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -12,7 +12,11 @@ jobs:
     name: Run Tests
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    
+    strategy:
+      matrix:
+        perl: ['5.14', '5.30', '5.32']
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -29,10 +33,10 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
       
-      - name: Set Up Perl
+      - name: Set Up Perl ${{ matrix.perl }}
         uses: shogo82148/actions-setup-perl@v1
         with:
-          perl-version: '5.30'
+          perl-version: ${{ matrix.perl }}
       
       - name: Display perl version
         run: perl --version
