--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -42,4 +42,4 @@ jobs:
         run: perl --version
       
       - name: Run Test
-        run: perl run_tests.pl
+        run: perl tests_suite.pl
