--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -37,6 +37,9 @@ jobs:
         uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: ${{ matrix.perl }}
+          install-modules-with: cpanm
+          install-modules:
+            Devel::Trace
       
       - name: Display perl version
         run: perl --version
